Recommendation Generation Module completed and fixed